src/App.css
body {
  background: black;
}
.App {
  color: white;
  display: flex;
  flex-direction: column;
}

.App > header {
  background: #272727;
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  padding: 0 16px;
}

.App > header svg path{
  fill: white;
}


.stripe {
  width: 10px;
  margin: 0 1px;
  border-width: 0 2px;
  border-style: solid;
}

.stripe-color {
  position: relative; 
  background-image: linear-gradient(45deg, #808080 25%, transparent 25%), 
    linear-gradient(-45deg, #808080 25%, transparent 25%),
    linear-gradient(45deg, transparent 75%, #808080 75%),
    linear-gradient(-45deg, transparent 75%, #808080 75%);
  background-size: 20px 20px;
  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
  border: 1px solid #717171;
  display: flex;
  /* flex-direction: column; */
  height: 50px;
  justify-content: center;
  width: 50px; 
}

.stripe-color.--black .stripe {
  background: black;
}

.stripe-color.--blue .stripe {
  background: #2564a9;
}

.stripe-color.--white .stripe {
  background: white;
}

.stripe-color.--kona .stripe {
  background: #202d55;
}

.stripe-color.--guardsman-blue {
  background: rgb(254, 252, 249);
}
.stripe-color.--guardsman-blue .stripe {
  background: #3b4d5f;
}

.stripe-color.--accent-red .stripe {
  border-color: #f50f39;
}

.stripe-color.--accent-black .stripe {
  border-color: black;
}

.stripe-color.--accent-white .stripe {
  border-color: white;
}

.stripe-color.--accent-lt-magnetic .stripe {
  border-color: #758086;
}

.stripe-color.--no-stripe .stripe {
  border-color: transparent;
}



h1.year {
  padding: 0 16px;
  display: inline-block;
  border-top: rgb(70, 70, 70) 2px solid;
  border-bottom: rgb(70, 70, 70) 2px solid;
  border-right: rgb(70, 70, 70) 2px solid;
}

.year__data {
  padding: 0 16px;
}

